--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Langton's Ant</title>
     <link rel="stylesheet" href="style.css">
-    <script src="raphael-min.js"></script>
-    <script src="ant.js"></script>
+    <script src="lib/raphael-min.js"></script>
+    <script src="lib/Ant.js"></script>
   </head>
   <body>
     <!-- page content -->
