--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,11 +10,14 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="lib/underscore-min.js"></script>
   <script type="text/javascript" src="src/Ant.js"></script>
+  <script type="text/javascript" src="src/World.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/AntSpec.js"></script>
+  <script type="text/javascript" src="spec/WorldSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
