--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Langton's Ant</title>
     <link rel="stylesheet" href="style.css">
+    <script src="lib/underscore-min.js"></script>
     <script src="lib/raphael-min.js"></script>
     <script src="lib/Ant.js"></script>
   </head>
