--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 
   <script type="text/javascript" src="lib/underscore-min.js"></script>
   <script type="text/javascript" src="lib/raphael-min.js"></script>
-  <script type="text/javascript" src="src/World.js"></script>
-  <script type="text/javascript" src="src/WorldView.js"></script>
-  <script type="text/javascript" src="src/Ant.js"></script>
+  <script type="text/javascript" src="src/model/Ant.js"></script>
+  <script type="text/javascript" src="src/model/World.js"></script>
+  <script type="text/javascript" src="src/view/WorldView.js"></script>
   <script>
     var paper = Raphael(document.getElementById("paper"), 500, 500);
     var world = new World();
     var worldView = new WorldView(world, paper);
+    var ant = new Ant(world, 10, 10);
 
-    world.reviveCell(0, 0);
-    world.reviveCell(1, 1);
-    world.reviveCell(2, 2);
-    worldView.paint();
+    window.setInterval(function() { ant.move(); }, 256);
   </script>
 </html>
