--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,13 +11,16 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="lib/underscore-min.js"></script>
-  <script type="text/javascript" src="src/Ant.js"></script>
-  <script type="text/javascript" src="src/World.js"></script>
+  <script type="text/javascript" src="src/model/Ant.js"></script>
+  <script type="text/javascript" src="src/model/World.js"></script>
+  <script type="text/javascript" src="src/view/WorldView.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/AntSpec.js"></script>
-  <script type="text/javascript" src="spec/WorldSpec.js"></script>
+  <script type="text/javascript" src="spec/doubles/PaperDouble.js"></script>
+  <script type="text/javascript" src="spec/model/AntSpec.js"></script>
+  <script type="text/javascript" src="spec/model/WorldSpec.js"></script>
+  <script type="text/javascript" src="spec/view/WorldViewSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
